--- a/src/main/resources/templates/fragments/admin_header.html
+++ b/src/main/resources/templates/fragments/admin_header.html
@@ -9,7 +9,7 @@
                     <a class="nav-link" th:href="@{/admin/list}">관리자 목록</a>
                 </li>
                 <li class="nav-item">
-                    <a class="nav-link" th:href="@{/member/list}">회원 목록</a>
+                    <a class="nav-link" th:href="@{/admin/members}">회원 목록</a>
                 </li>
                 <li class="nav-item">
                     <a class="nav-link" th:href="@{/membership/list}">회원권 목록</a>
