--- a/src/main/resources/templates/member/detail.html
+++ b/src/main/resources/templates/member/detail.html
@@ -38,7 +38,10 @@
 
         <tr>
             <th>성별</th>
-            <td th:text="${member.gender}"></td>
+            <td>
+                <span th:if="${member.gender.name() == 'M'}">남</span>
+                <span th:if="${member.gender.name() == 'F'}">여</span>
+            </td>
         </tr>
 
         <tr>
@@ -53,30 +56,27 @@
 
         <tr>
             <th>등록일</th>
-            <td th:text="${#temporals.format(member.createdAt, 'yyyy-MM-dd')}"></td>
+            <td th:text="${#temporals.format(member.createdAt, 'yyyy-MM-dd HH:mm')}"></td>
         </tr>
 
         <tr>
             <th>수정일</th>
-            <td th:text="${#temporals.format(member.updatedAt, 'yyyy-MM-dd')}"></td>
+            <td th:text="${#temporals.format(member.updatedAt, 'yyyy-MM-dd HH:mm')}"></td>
         </tr>
 
     </table>
 
     <div class="mt-3">
         <a th:href="@{/member/list}" class="btn btn-secondary">목록</a>
-        <a th:href="@{'/member/edit/' + ${member.memberId}}" class="btn btn-primary">수정</a>
-        <div sec:authorize="hasRole('ADMIN')" style="display: inline-block;">
+        <div sec:authorize="isAuthenticated() and principal.memberId == #vars.member.memberId" style="display: inline-block;">
+            <a th:href="@{'/member/edit/' + ${member.memberId}}" class="btn btn-primary">수정</a>
             <form th:if="${member}"
                     th:action="@{/member/withdraw}" method="post" style="display:inline;">
                 <button type="submit" class="btn btn-danger" onclick="return confirm('정말 탈퇴 처리하시겠습니까?');">탈퇴 처리</button>
             </form>
-
         </div>
         <a th:href="@{/membership/register}" class="btn btn-dark"
            sec:authorize="hasRole('ADMIN')">회원권 등록</a>
-
-
     </div>
 
 </div>
