--- a/src/main/resources/templates/member/edit.html
+++ b/src/main/resources/templates/member/edit.html
@@ -1,28 +1,37 @@
 <!DOCTYPE html>
-<html xmlns:th="http://www.thymeleaf.org">
+<html xmlns:th="http://www.thymeleaf.org"
+      xmlns:sec="http://www.thymeleaf.org/extras/spring-security">
 <head>
     <meta charset="UTF-8">
     <title>회원 수정</title>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet">
 </head>
 <body>
+<div th:replace="fragments/member_header :: navbar"></div>
+
 <div class="container mt-5">
     <h2 class="mb-4">헬스장 회원 수정</h2>
 
-    <form th:action="@{${member.memberId != null} ? '/member/edit' : '/member/register'}"
-          method="post" th:object="${member}">
+    <form th:action="@{/member/edit}" method="post" th:object="${memberForm}">
 
         <!-- 수정시 필요한 ID 전달 -->
         <input type="hidden" th:field="*{memberId}" />
 
         <div class="mb-3">
             <label for="memberName" class="form-label">이름</label>
-            <input type="text" th:field="*{memberName}" class="form-control" id="memberName" required disabled>
+            <input type="text" th:field="*{memberName}" class="form-control" id="memberName" required>
         </div>
 
         <div class="mb-3">
             <label for="memberLoginId" class="form-label">사용자ID</label>
-            <input type="text" th:field="*{memberLoginId}" class="form-control" id="memberLoginId" required disabled>
+            <input type="text" th:field="*{memberLoginId}" class="form-control" id="memberLoginId" readonly>
+        </div>
+
+        <!-- 기존 비밀번호 확인 -->
+        <div class="mb-3">
+            <label for="currentPassword" class="form-label">비밀번호</label>
+            <input type="password" th:field="*{currentPassword}" th:errors="*{currentPassword}"
+                   class="form-control" id="currentPassword" required>
         </div>
 
         <div class="mb-3">
@@ -32,7 +41,15 @@
 
         <div class="mb-3">
             <label for="email" class="form-label">이메일</label>
-            <input type="email" th:field="*{email}" class="form-control" id="email" required>
+            <div class="input-group">
+                <input type="email" th:field="*{email}" class="form-control" id="email" required>
+                <button type="button" id="checkEmailBtn" class="btn btn-dark">중복확인</button>
+            </div>
+            <div th:if="${#fields.hasErrors('email')}"
+                 th:errors="*{email}"
+                 class="form-text text-danger">
+                이미 가입된 이메일 입니다.
+            </div>
         </div>
 
         <div class="mb-3">
@@ -42,8 +59,8 @@
                 <label class="form-check-label" for="genderM">남</label>
             </div>
             <div class="form-check form-check-inline">
-                <input class="form-check-input" type="radio" th:field="*{gender}" id="genderW" value="W">
-                <label class="form-check-label" for="genderW">여</label>
+                <input class="form-check-input" type="radio" th:field="*{gender}" id="genderF" value="F">
+                <label class="form-check-label" for="genderF">여</label>
             </div>
         </div>
 
@@ -52,26 +69,10 @@
             <input type="date" th:field="*{birthDate}" class="form-control" id="birthDate">
         </div>
 
-        <div class="mb-3">
-            <label class="form-label">회원 상태</label><br>
-
-            <div class="form-check form-check-inline">
-                <input class="form-check-input" type="radio" th:field="*{status}" id="status1" value="1">
-                <label class="form-check-label" for="status1">정상</label>
-            </div>
-
-            <div class="form-check form-check-inline">
-                <input class="form-check-input" type="radio" th:field="*{status}" id="status2" value="2">
-                <label class="form-check-label" for="status2">이용중지</label>
-            </div>
-
-            <div class="form-check form-check-inline">
-                <input class="form-check-input" type="radio" th:field="*{status}" id="status3" value="3">
-                <label class="form-check-label" for="status3">탈퇴</label>
-            </div>
+        <!-- 글로벌 에러 -->
+        <div th:if="${#fields.hasGlobalErrors()}">
+            <p th:each="err : ${#fields.globalErrors()}" th:text="${err}" class="text-danger"></p>
         </div>
-
-
         <button type="submit" class="btn btn-primary">수정하기</button>
     </form>
 </div>
