--- a/src/main/resources/templates/member/detail.html
+++ b/src/main/resources/templates/member/detail.html
@@ -7,6 +7,9 @@
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet">
 </head>
 <body>
+<div sec:authorize="hasRole('ADMIN')" th:replace="fragments/admin_header :: navbar"></div>
+<div sec:authorize="hasRole('MEMBER')" th:replace="fragments/member_header :: navbar"></div>
+
 <div class="container mt-5">
     <h2 class="mb-4">회원 상세 정보</h2>
 
