--- a/src/main/resources/templates/membership/detail.html
+++ b/src/main/resources/templates/membership/detail.html
@@ -1,11 +1,14 @@
 <!DOCTYPE html>
-<html xmlns:th="http://www.thymeleaf.org">
+<html xmlns:th="http://www.thymeleaf.org"
+      xmlns:sec="http://www.thymeleaf.org/extras/spring-security">
 <head>
   <meta charset="UTF-8">
   <title>회원권 상세정보</title>
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet">
 </head>
 <body>
+<div sec:authorize="hasRole('ADMIN')" th:replace="fragments/admin_header :: navbar"></div>
+<div sec:authorize="hasRole('MEMBER')" th:replace="fragments/member_header :: navbar"></div>
 
 <div class="container mt-5">
   <h2 class="mb-4">회원권 상세정보</h2>
@@ -148,10 +151,10 @@
         <thead class="table-dark">
           <tr>
             <th>환불번호</th>
-            <th>회원권 번호</th>
-            <th>회원명</th>
             <th>상태</th>
-            <th>등록일</th>
+            <th>환불요청일</th>
+            <th>승인일</th>
+            <th>거절일</th>
             <th>상세</th>
           </tr>
           </thead>
@@ -159,31 +162,35 @@
 
 
           <!-- 목록 출력 -->
-          <tr th:if="${refundHistory}">
-            <td th:text="${refundHistory.refundId}"></td>
-            <td th:text="${refundHistory.membershipId}"></td>
-            <td th:text="${refundHistory.memberName}"></td>
+          <tr th:if="${refund}">
+            <td th:text="${refund.refundId}"></td>
             <td>
-              <span class="badge bg-secondary" th:if="${refundHistory.refundStatus == 0}">요청</span>
-              <span class="badge bg-success" th:if="${refundHistory.refundStatus == 1}">승인</span>
-              <span class="badge bg-danger" th:if="${refundHistory.refundStatus == 2}">거절</span>
+              <span class="badge bg-secondary" th:if="${refund.refundStatus.name() == 'REQUESTED'}">요청</span>
+              <span class="badge bg-secondary" th:if="${refund.refundStatus.name() == 'PENDING'}">검토중</span>
+              <span class="badge bg-success" th:if="${refund.refundStatus.name() == 'APPROVED'}">승인</span>
+              <span class="badge bg-danger" th:if="${refund.refundStatus.name() == 'REJECTED'}">거절</span>
             </td>
-            <td th:text="${#temporals.format(refundHistory.requestedAt, 'yyyy-MM-dd')}"></td>
+            <td th:text="${#temporals.format(refund.requestedAt, 'yyyy-MM-dd')}"></td>
+            <td th:text="${#temporals.format(refund.approvedAt, 'yyyy-MM-dd')}"></td>
+            <td th:text="${#temporals.format(refund.rejectedAt, 'yyyy-MM-dd')}"></td>
             <td>
-              <a th:href="@{/membership/refund/detail/{id}(id=${refundId})}"
+              <a sec:authorize="hasRole('ADMIN')"
+                 th:href="@{/admin/refund/detail/{id}(id=${refund.refundId})}"
+                 class="btn btn-dark">상세</a>
+              <a sec:authorize="hasRole('MEMBER')"
+                 th:href="@{/member/refund/detail/{id}(id=${refund,refundId})}"
                  class="btn btn-dark">상세</a>
             </td>
           </tr>
 
 
           <!-- 데이터가 없을 경우 -->
-          <tr th:unless="${refundHistory}">
+          <tr th:unless="${refund}">
             <td colspan="7">등록된 환불 내역이 없습니다.</td>
           </tr>
 
         </tbody>
       </table>
-
 
     </div>
   </div>
