feat(view): /admin/signup.html에 추가된 컬럼 입력 항목 추가

--- a/src/main/resources/templates/admin/signup.html
+++ b/src/main/resources/templates/admin/signup.html
@@ -31,7 +31,7 @@
 
         <!-- 비밀번호 확인 -->
         <div class="mb-3">
-            <label for="confirmPassword" class="form-label">비밀번호</label>
+            <label for="confirmPassword" class="form-label">비밀번호 확인</label>
             <input type="password" th:field="*{confirmPassword}" class="form-control" id="confirmPassword" required>
             <div id="passwordMatchMessage" class="form-text text-danger" style="display: none;">
                 비밀번호가 일치하지 않습니다.
@@ -42,6 +42,18 @@
         <div class="mb-3">
             <label for="adminName" class="form-label">사용자 이름</label>
             <input type="text" th:field="*{adminName}" class="form-control" id="adminName" required>
+        </div>
+
+        <!-- 사용자 전화번호 -->
+        <div class="mb-3">
+            <label for="adminPhone" class="form-label">사용자 전화번호</label>
+            <input type="text" th:field="*{adminPhone}" class="form-control" id="adminPhone" required>
+        </div>
+
+        <!-- 사용자 이메일 -->
+        <div class="mb-3">
+            <label for="adminEmail" class="form-label">사용자 이메일</label>
+            <input type="email" th:field="*{adminEmail}" class="form-control" id="adminEmail" required>
         </div>
 
         <!-- 직위 -->
@@ -63,7 +75,7 @@
 
 <script th:inline="javascript">
     // 중복 아이디 확인
-    const userIdInput = document.getElementById('userId');
+    const userIdInput = document.getElementById('adminLoginId');
     const checkBtn = document.getElementById('checkUserIdBtn');
     const resultMessage = document.getElementById('userIdCheckMessage');
 
