--- a/src/main/resources/templates/admin/edit.html
+++ b/src/main/resources/templates/admin/edit.html
@@ -8,7 +8,7 @@
 <body>
 
 <!-- 상단바 삽입 -->
-<div th:replace="fragments/header :: navbar"></div>
+<div th:replace="fragments/admin_header :: navbar"></div>
 
 <div class="container mt-5">
     <h2 class="mb-4">관리자 회원 정보 수정</h2>
@@ -17,12 +17,13 @@
 
     <!-- 퇴사 처리 form (숨김 처리) -->
     <form id="resignForm" th:action="@{/admin/resign/{id}(id=${admin.adminId})}" method="post" style="display:none;">
-        <!-- CSRF 토큰 필수 -->
-        <input type="hidden" th:name="${_csrf.parameterName}" th:value="${_csrf.token}"/>
+        <!-- CSRF 토큰 필수
+        <input type="hidden" th:name="${_csrf.parameterName}" th:value="${_csrf.token}"/>\
+        -->
     </form>
 
     <form th:action="@{/admin/edit}" method="post" th:object="${admin}">
-        <input type="hidden" id="adminId" th:value="${adminId}">
+        <input type="hidden" id="adminId" th:field="*{adminId}">
 
         <!-- 사용자ID -->
         <div class="mb-3">
@@ -41,7 +42,7 @@
 
         <!-- 비밀번호 확인 -->
         <div class="mb-3">
-            <label for="confirmPassword" class="form-label">비밀번호</label>
+            <label for="confirmPassword" class="form-label">비밀번호 확인</label>
             <input type="password" th:field="*{confirmPassword}" class="form-control" id="confirmPassword" required>
             <div id="passwordMatchMessage" class="form-text text-danger" style="display: none;">
                 비밀번호가 일치하지 않습니다.
@@ -54,6 +55,18 @@
             <input type="text" th:field="*{adminName}" class="form-control" id="adminName">
         </div>
 
+        <!-- 사용자 전화번호 -->
+        <div class="mb-3">
+            <label for="adminPhone" class="form-label">사용자 전화번호</label>
+            <input type="text" th:field="*{adminPhone}" class="form-control" id="adminPhone" required>
+        </div>
+
+        <!-- 사용자 이메일 -->
+        <div class="mb-3">
+            <label for="adminEmail" class="form-label">사용자 이메일</label>
+            <input type="email" th:field="*{adminEmail}" class="form-control" id="adminEmail" required>
+        </div>
+
         <!-- 직위 -->
         <div class="mb-3">
             <label class="form-label">관리자 직위</label><br>
@@ -64,14 +77,14 @@
 
         <!-- 등록일자 -->
         <div class="mb-3">
-            <label for="createdAt" class="form-label">등록일자</label>
-            <input type="date" th:field="*{createdAt}" class="form-control" id="createdAt" readonly>
+            <label class="form-label">등록일자</label>
+            <span th:text="${#temporals.format(admin.createdAt, 'yyyy-MM-dd HH:mm')}" class="form-control" id="createdAt"></span>
         </div>
 
         <!-- 최종수정일자 -->
         <div class="mb-3">
-            <label for="updatedAt" class="form-label">최종수정일자</label>
-            <input type="date" th:field="*{updatedAt}" class="form-control" id="updatedAt" readonly>
+            <label class="form-label">최종수정일자</label>
+            <span th:text="${#temporals.format(admin.updatedAt, 'yyyy-MM-dd HH:mm')}" class="form-control" id="updatedAt"></span>
         </div>
 
         <button type="submit" class="btn btn-primary">등록하기</button>
